--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #222222;
+	background-color: black;
 }
 
 table {
@@ -26,7 +26,7 @@ td {
 }
 
 thead th {
-	background-color: #777777;
+	background-color: #555555;
 	color: #ffffff;
 }
 
