--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ body {
 caption {
   color: white;
   background: hsl(13, 96%, 39%);
-  font-size: 1.5em;
+  font-size: 2.5em;
   box-shadow: .1em .1em .1em 0 hsl(0, 0, 50%);
   padding: .2em .2em .2em 2em;
   width: 30em;
@@ -16,7 +16,7 @@ caption {
 .p-con1 {
 	margin: 0 auto;
 	border: 1px solid silver;
-	height: 154px
+	height: 74px
 }
 
 .p-con1 div {
@@ -25,7 +25,7 @@ caption {
 
 .bit1 {
 	border: 1px solid silver;
-	height: 150px;
+	height: 70px;
 	width: 99%;
 }
 
@@ -36,9 +36,11 @@ caption {
 
 .p-con div {
 	display: inline-block;
+        align: center
 }
 
 .bit {
 	border: 1px solid silver;
 	width: 180px;
+        valign: top
 }
